--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-preset-latest": "^6.24.1"
   },
   "scripts": {
+    "start": "babel script.js --watch --out-file script-compiled.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
