--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-latest": "^6.24.1"
+    "babel-preset-latest": "^6.24.1",
+    "lodash": ">=4.17.13"
   },
   "scripts": {
     "start": "babel script.js --watch --out-file script-compiled.js",
